--- a/src/components/list/style.css
+++ b/src/components/list/style.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+
 *{
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+footer{
+  display: flex;
+  justify-content: center;
 }
 header{
   background-color: #efefef;
@@ -34,4 +40,12 @@ h3{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.developer {
+  font-family: 'Poppins', sans-serif;
+  color: #6bbe66;
+  opacity: 50%;
+  font-size: 10px;
+  position: fixed;
+  bottom: 10px;
 }
